@@ -2,10 +2,11 @@ bluemaemo (0.3) unstable; urgency=low
 
 
 bluemaemo 0.3
-
+	
+	* Added support for 'key combos' in the profiles (e.g: ctrl+f, ctrl+alt+f6,...)
 	* Added Ctrl, Alt and F1 to F11 keys in the virtual keyboard
 	* Fixed bug in bluetooth adapter state
-	* Moved configuration files to /etc/bluemaemo
+	* Moved configuration files to /etc/bluemaemo/
 	* Added back buttons in 'wait for connection' and 'process connection' screens
 	* Fixed sdl/openGL keystrokes bug
 
